# comfy-bridge

./: .coverage  .dockerignore  .env  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  BLOCKCHAIN.md  CHANGELOG_BLOCKCHAIN.md  DEPLOYMENT.md  DOCKER.md  DOCKER_SUMMARY.md  FIX_RECIPE_SYNC.md  GRID_CONNECTION.md  I2V_SETUP.md  LTXV_REGISTRATION.md  MIGRATION_GUIDE.md  Makefile  PARAMETER_FLOW.md  QUICKSTART.md  README.md  README_developers.md  RECIPESVAULT_NOT_REGISTERED.md  RECIPESVAULT_TROUBLESHOOTING.md  RECIPE_REGISTRATION_FAILED.md  RECIPE_REGISTRATION_SUMMARY.md  REGISTER_MODELS.md  REGISTER_RECIPE_GUIDE.md  TEST_SCRIPTS_README.md  TEST_SUMMARY.md  TROUBLESHOOTING.md  VIDEO_SETUP.md  api_ready_workflow.json  bridge.py  build-electron-app.bat  build-electron-app.sh  catalog_sync.py  chat_generate_example_huge_front_end_sorry.html  check_blockchain_models.py  (+62 more)
bridge/: AGENTS.md  api_client.py  bridge.py  cli.py  comfyui_detect.py  config.py  model_mapper.py  utils.py  workflow.py  ws_worker.py
comfy_bridge/: __init__.py  __main__.py  api_client.py  bridge.py  cli.py  comfyui_client.py  config.py  filesystem_checker.py  health.py  job_poller.py  model_mapper.py  modelvault_client.py  optional_deps.py  payload_builder.py  prompt_checker.py  r2_uploader.py  recipe_sync.py  recipesvault_client.py  recipevault_client.py  result_processor.py  utils.py  wan_assets.py  workflow.py
docs/: PLAN_LTX_SUPPORT.md
management-ui/: Dockerfile  app.py  requirements.txt
management-ui-nextjs/: .dockerignore  .gitignore  .nextignore  Dockerfile  README.md  create-desktop-shortcut.js  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
scripts/: check_recipe_registration.py  check_transaction.py  check_tx_revert.py  debug_recipe_registration.py  decode_revert_reason.py  list_recipes.py  register-models-to-chain.js  register_missing_models.py  register_recipe.js  register_recipe_to_chain.py  restore_recipe_to_chain.py  unregister_recipe_from_chain.py
tests/: __init__.py  conftest.py  test_api_client.py  test_api_client_preview.py  test_bridge.py  test_catalog_sync.py  test_cli.py  test_config.py  test_gpu_info_api.py  test_utils.py  (+7 more)
(+107 files in other folders)
