[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfy-bridge"
version = "0.1.0"
description = "ComfyUI Bridge for AI Power Grid"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "httpx>=0.23.0",
  "python-dotenv>=0.21.0",
  "aiohttp>=3.8.0",
  "pillow>=9.0.0",
]
optional-dependencies = { 
  test = ["pytest>=7.0.0", "pytest-asyncio>=0.20.0"] 
}

[tool.setuptools.packages.find]
where = ["."]
include = ["comfy_bridge*"]